matricular estudiante modificado

--- a/src/app/dashboard/components/course-registration/course-registration.component.html
+++ b/src/app/dashboard/components/course-registration/course-registration.component.html
@@ -1,5 +1,6 @@
 <main>
     <section>
+        <h2>Mis cursos</h2>
         <div class="course-container" *ngFor="let course of listcourse">
             <div class="course-img">
                 <img
