--- a/src/app/dashboard/components/cursos/add-student/add-student.component.html
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.html
@@ -1,6 +1,6 @@
 <mat-card class="matCardContent">
     <div class="contenedor">
-        <h1>Gestión de Estudiantes - <span>{{ course.nombre }}</span></h1>
+        <h1>Gestión de Estudiantes - <span>{{ course?.nombre }}</span></h1>
 
         <div class="menuVariado">
             <div class="busquedaEstudiante">
@@ -41,19 +41,38 @@
                     {{ element.nombre }}
                 </td>
             </ng-container>
-
-            <ng-container matColumnDef="estado">
-                <th mat-header-cell *matHeaderCellDef id="estado">Estado</th>
+            <!-- correo -->
+            <ng-container matColumnDef="correo">
+                <th
+                mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                id="correo">
+                    Correo
+                </th>
                 <td
                     mat-cell
                     *matCellDef="let element"
-                    matTooltip="Estado de la matricula"
-                    class="estado">
-                    <div class="contenedorEstado">
-                        <div>
-                            Matriculado
-                        </div>
-                    </div>
+                    matTooltip="Correo electronico"
+                    class="correo">
+                    {{ element.correo }}
+                </td>
+            </ng-container>
+            <!-- perfil -->
+            <ng-container matColumnDef="perfil">
+                <th
+                mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                id="perfil">
+                    Perfil
+                </th>
+                <td
+                    mat-cell
+                    *matCellDef="let element"
+                    matTooltip="Perfil usuario"
+                    class="perfil">
+                    {{ element.perfil }}
                 </td>
             </ng-container>
 
@@ -66,7 +85,7 @@
                     class="desmatricular"
                     matTooltip="Desmatricular estudiante."
                     color="warn"
-                    (click)="matricularEstudiante(element)"
+                    (click)="deleteStudent(element)"
                     >
                     <mat-icon>
                         <span class="material-icons">person_off</span>
