--- a/src/app/dashboard/components/glossary/glossary-list/glossary-list.component.html
+++ b/src/app/dashboard/components/glossary/glossary-list/glossary-list.component.html
@@ -27,6 +27,13 @@
         (click)="downloadPDF()">
             Descargar PDF
     </button>
+    <button
+        mat-raised-button
+        color="primary"
+        (click)="goBack()"
+        style="background: var(--main-color2); color: white; margin-left: 16px;">
+            << Regresar
+    </button>
 
     <section *ngIf="listView" id="listData">
         <div class="student-view" *ngFor="let item of dataSource.data">
