--- a/src/app/home/components/auth/login/login.component.html
+++ b/src/app/home/components/auth/login/login.component.html
@@ -32,6 +32,22 @@
                             </div>
                         </ng-container>
                     <button type="submit">Iniciar sesión</button>
+                    <div class="media-btn">
+                        <div class="media-btn-icon">
+                            <img class="media-icon" src="assets/icon-botones/icon-ligth.svg"/>
+                        </div>
+                        <div class="media-btn-text">
+                            <div>Sign in with google</div>
+                        </div>
+                    </div>
+                    <div class="media-btn | faceboo-btn">
+                        <div class="media-btn-icon">
+                            <img class="media-icon" src="assets/icon-botones/iconsfacebook.svg"/>
+                        </div>
+                        <div class="media-btn-text">
+                            <div>Sign in with Facebook</div>
+                        </div>
+                    </div>
             </form>
             <a routerLink="/home/recover">¿Olvido su contraseña?</a>
         </div>
