--- a/src/app/home/components/auth/login/login.component.scss
+++ b/src/app/home/components/auth/login/login.component.scss
@@ -66,6 +66,15 @@
     padding: 5px;
 }
 
+.botonGoogle
+{
+    width: 320px;
+    img{
+        width:100%;
+        height: 70px;
+    }
+}
+
 .login-container .login a {
     text-decoration: none;
     font-size: 1rem;
