--- a/src/app/home/components/auth/login/login.component.html
+++ b/src/app/home/components/auth/login/login.component.html
@@ -37,7 +37,7 @@
                             <img class="media-icon" src="assets/icon-botones/icon-ligth.svg"/>
                         </div>
                         <div class="media-btn-text">
-                            <div>Sign in with google</div>
+                            <div>Ingresa con google</div>
                         </div>
                     </div>
                     <div class="media-btn | faceboo-btn" (click)="loginFacebook()">
@@ -45,7 +45,7 @@
                             <img class="media-icon" src="assets/icon-botones/iconsfacebook.svg"/>
                         </div>
                         <div class="media-btn-text">
-                            <div>Sign in with Facebook</div>
+                            <div>Ingresa con Facebook</div>
                         </div>
                     </div>
             </form>
