--- a/src/app/dashboard/components/course-registration/lessons/lessons.component.html
+++ b/src/app/dashboard/components/course-registration/lessons/lessons.component.html
@@ -53,9 +53,9 @@
                 <button
                     mat-stroked-button
                     color="primary"
-                    matTooltip="Descargar"
-                    ><!--(click)="goToEdit(element)"-->
-                    <mat-icon style="color: darkgoldenrod;">get_app</mat-icon>
+                    matTooltip="Estudiar lección"
+                    (click)="goToCourseView(element)">
+                    <mat-icon style="color: darkcyan;">visibility</mat-icon>
                 </button>
             </td>
         </ng-container>
