creacion de nueva rama para anuncios de cursos

--- a/src/app/home/components/auth/login/login.component.html
+++ b/src/app/home/components/auth/login/login.component.html
@@ -32,7 +32,7 @@
                             </div>
                         </ng-container>
                     <button type="submit">Iniciar sesión</button>
-                    <div class="media-btn" (click)="loginGoogle()">
+                    <!-- <div class="media-btn" (click)="loginGoogle()">
                         <div class="media-btn-icon">
                             <img class="media-icon" src="assets/icon-botones/icon-ligth.svg"/>
                         </div>
@@ -47,7 +47,7 @@
                         <div class="media-btn-text">
                             <div>Ingresa con Facebook</div>
                         </div>
-                    </div>
+                    </div> -->
             </form>
             <a routerLink="/home/recover">¿Olvido su contraseña?</a>
         </div>
