--- a/src/app/course-view/components/evaluation/evaluation-home/evaluation-home.component.html
+++ b/src/app/course-view/components/evaluation/evaluation-home/evaluation-home.component.html
@@ -1,1 +1,26 @@
-<p>evaluation-home works!</p>
+<main>
+    <section>
+        <div class="exercise-img">
+            <img src="/assets/icons/examen.svg" alt="imagen evaluación">
+        </div>
+        <div class="exercise-info">
+            <div class="info-header">
+                <h1>Excelente, Validaremos todo lo aprendido</h1>
+                <h2>Curso {{ course?.nombre }}</h2>
+                <h2>Lección {{ lesson?.posicion + '. ' + lesson?.nombre }}</h2>
+            </div>
+            <div class="options">
+                <h3>{{ evaluation?.titulo }}</h3>
+                <ul>
+                    <li>Puedes presentar el examen {{ exercises?.intentos === 1 ? exercises?.intentos + ' vez.' : exercises?.intentos + ' veces.' }}</li>
+                    <li>El ejercicio consta de {{ questions?.length }} preguntas.</li>
+                    <li>Tienes {{ exercises?.duracion }} minutos para presentarlo.</li>
+                    <li>Necesitas {{ getAnswersToPass() }} respuestas correctas para aprobar.</li>
+                </ul>
+            </div>
+            <div class="btn">
+                <button mat-raised-button color="primary" (click)="startExam()">Empezar prueba</button>
+            </div>
+        </div>
+    </section>
+</main>
