--- a/src/app/dashboard/components/documents/documents.component.html
+++ b/src/app/dashboard/components/documents/documents.component.html
@@ -48,4 +48,8 @@
         [pageSizeOptions]="[10, 15, 20]"
         showFirstLastButtons>
     </mat-paginator>
+
+    <section class="buttonVolver">
+        <button mat-button (click)="goBack()" ><< Volver al curso</button>
+    </section>
 </div>
